# tabstruct

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: sample.yaml
samples/: array_sample.json  array_sample.yaml  convert_array_sample.json  convert_array_sample.yaml  convert_sample.json  convert_sample.yaml
src/: app.rs  cli.rs  error.rs  formatter.rs  io.rs  lib.rs  main.rs  model.rs
src/converter/: csv_to_model.rs  mod.rs  model_to_csv.rs  model_to_json.rs  model_to_yaml.rs
src/parser/: csv.rs  json.rs  mod.rs  yaml.rs
src/schema/: analyze.rs  mod.rs  types.rs
tests/: convert_cli.rs  convert_json_yaml.rs  error_cli.rs  schema_cli.rs
tests/fixtures/: array_field.json  convert_sample.csv  invalid_header_double_dot.csv  schema_sample.csv  schema_sample.json
