[package]
name = "tabstruct"
version = "0.1.0"
edition = "2021"
description = "Convert CSV, JSON, and YAML while inspecting structure"
license = "MIT OR Apache-2.0"
authors = ["tabstruct"]

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
