[package]
name = "tabstruct"
version = "0.1.0"
edition = "2021"
description = "CLI tool for inspecting and converting CSV, JSON, and YAML with nested structure support"
license = "MIT"
repository = "https://github.com/kyotalab/tabstruct"
readme = "README.md"
keywords = ["cli", "csv", "json", "yaml", "converter"]
categories = ["command-line-utilities"]
authors = ["tabstruct"]

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
